# RelearnOpenGL

./: .gitmodules  README.md
LearnOpenGL/: .gitignore  LearnOpenGL.sln
LearnOpenGL/LearnOpenGL/: CMakeLists.txt  LearnOpenGL.vcxproj  LearnOpenGL.vcxproj.filters  camera.cpp  camera.hpp  glad.c  mesh.cpp  mesh.hpp  model.cpp  model.h  model.hpp  shader.cpp  shader.fs  shader.hpp  shader.vs  window.cpp
LearnOpenGL/LearnOpenGL/include/glad/: glad.h
LearnOpenGL/LearnOpenGL/shaders/: framebuffers_screen.fs  shader.fs
libs/: glfw3.lib
